--- a/client/views/nav.html
+++ b/client/views/nav.html
@@ -2,7 +2,7 @@
 	<nav class="top-bar" data-topbar data-options="is_hover: false">
 		<ul class="title-area">
 			<li class="name">
-				<h1><a href="/">BRING IT! <em>alpha</em></a></h1>
+				<h1><a href="/">BRING IT! <em>beta</em></a></h1>
 			</li>
 			 <li class="toggle-topbar menu-icon"><a><span>Menu</span></a></li>
 		</ul>
