--- a/client/views/home.html
+++ b/client/views/home.html
@@ -19,7 +19,6 @@
 					</div>
 				</div>
 				<div class="row ">
-
 					<div class="small-12 columns {{#if afFieldIsInvalid 'evName'}}error{{/if}}">
 						{{afFieldLabel 'evName' }}
 						{{afFieldInput 'evName' }}
@@ -31,7 +30,7 @@
 				<div class="row ">
 					<div class="small-12 columns {{#if afFieldIsInvalid 'evDate'}} error{{/if}}">
 						{{afFieldLabel 'evDate'}}
-						{{afFieldInput 'evDate' type="date" placeholder='MM/DD/YYYY'}}
+						{{afFieldInput 'evDate' placeholder='MM/DD/YYYY'}}
 						{{#if afFieldIsInvalid 'evDate'}}
 						<small class="error">{{afFieldMessage 'evDate'}}</small>
 						{{/if}}
@@ -107,7 +106,7 @@
 						<a href="{{linkedinUrl}}"><i class="ion-social-linkedin"></i></a>
 						<a href="{{blogUrl}}"><i class="ion-social-wordpress"></i></a>
 					</div>
-					<h5 class="subheader">I'm a digital producer in NYC, and I love creating platforms and web apps.  This is a little experiment with <a href="http://www.meteor.com">Meteor.js</a> and <a href="http://foundation.zurb.com">Foundation 5</a>.  It's an alpha (and may not ever get past that stage), but feel free to play and <a href="{{bugUrl}}">report any bugs</a> you find!</h5>
+					<h5 class="subheader">I'm a digital producer in NYC, and I love creating platforms and web apps.  This is a little experiment with <a href="http://www.meteor.com">Meteor.js</a> and <a href="http://foundation.zurb.com">Foundation 5</a>.  It's a beta (and may not ever get past that stage), but feel free to play and <a href="{{bugUrl}}">report any bugs</a> you find!</h5>
 				</div>
 			</div>
 		</div>
