--- a/client/views/eventShow.html
+++ b/client/views/eventShow.html
@@ -248,6 +248,7 @@
 				</ul>
 			</div>
 		</div>
+		<a class="close-reveal-modal">&#215;</a>
 	</div>
 </template>
 
@@ -266,6 +267,7 @@
 				</ul>
 			</div>
 		</div>
+		<a class="close-reveal-modal">&#215;</a>
 	</div>
 </template>
 
