--- a/client/stylesheets/app.css
+++ b/client/stylesheets/app.css
@@ -66,73 +66,74 @@ table {
   background-repeat: no-repeat;
   background-size: auto 100%;
   background-position: left top;
+  background-attachment: fixed;
   webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-image: url("/images/shutterstock_143361787_tall.jpg"); }
 
-/* line 106, ../../sass/app.scss */
+/* line 107, ../../sass/app.scss */
 .heroCopy h1, .heroCopy p, .heroCopy ul {
   color: white;
   font-weight: 300; }
-/* line 110, ../../sass/app.scss */
+/* line 111, ../../sass/app.scss */
 .heroCopy p, .heroCopy ul {
   font-size: 1.25em !important; }
-/* line 113, ../../sass/app.scss */
+/* line 114, ../../sass/app.scss */
 .heroCopy p {
   margin: 1.25em 0 .5em 0; }
 
-/* line 118, ../../sass/app.scss */
+/* line 119, ../../sass/app.scss */
 #benefits {
   background-color: white;
   border-top: 1px solid #555;
   padding-top: 2em;
   padding-bottom: 2em; }
-  /* line 124, ../../sass/app.scss */
+  /* line 125, ../../sass/app.scss */
   #benefits i {
     font-size: 4em; }
-  /* line 128, ../../sass/app.scss */
+  /* line 129, ../../sass/app.scss */
   #benefits p, #benefits h4 {
     font-weight: 300; }
-  /* line 132, ../../sass/app.scss */
+  /* line 133, ../../sass/app.scss */
   #benefits p {
     margin-bottom: 1em !important; }
-  /* line 136, ../../sass/app.scss */
+  /* line 137, ../../sass/app.scss */
   #benefits .last-item p {
     margin-bottom: 0; }
-  /* line 140, ../../sass/app.scss */
+  /* line 141, ../../sass/app.scss */
   #benefits h4 {
     text-transform: capitalize; }
 
-/* line 146, ../../sass/app.scss */
+/* line 147, ../../sass/app.scss */
 #responsive .row {
   border-top: 2px solid #efefef;
   padding-top: 2em;
   padding-bottom: 2em; }
-/* line 152, ../../sass/app.scss */
+/* line 153, ../../sass/app.scss */
 #responsive h4, #responsive p {
   text-align: center; }
-/* line 155, ../../sass/app.scss */
+/* line 156, ../../sass/app.scss */
 #responsive p {
   font-weight: 300;
   margin-bottom: 0; }
-/* line 160, ../../sass/app.scss */
+/* line 161, ../../sass/app.scss */
 #responsive img {
   width: 100%; }
 
-/* line 165, ../../sass/app.scss */
+/* line 166, ../../sass/app.scss */
 #bio {
   background-color: #efefef;
   padding: 2em 0; }
-  /* line 168, ../../sass/app.scss */
+  /* line 169, ../../sass/app.scss */
   #bio .social-icons a {
     margin: 0 .5em 0 .5em; }
-  /* line 172, ../../sass/app.scss */
+  /* line 173, ../../sass/app.scss */
   #bio h4, #bio h5, #bio .social-icons {
     text-align: center; }
 
-/* line 178, ../../sass/app.scss */
+/* line 179, ../../sass/app.scss */
 footer {
   background-color: #333333;
   color: #aeaeae;
@@ -142,110 +143,110 @@ footer {
   /* Height of the footer */
   padding: .5em 0;
   margin-top: 0; }
-  /* line 188, ../../sass/app.scss */
+  /* line 189, ../../sass/app.scss */
   footer p {
     font-size: .875em;
     float: right; }
-  /* line 192, ../../sass/app.scss */
+  /* line 193, ../../sass/app.scss */
   footer a {
     font-weight: 300;
     color: #aeaeae; }
-    /* line 195, ../../sass/app.scss */
+    /* line 196, ../../sass/app.scss */
     footer a:hover {
       color: #626262; }
-  /* line 199, ../../sass/app.scss */
+  /* line 200, ../../sass/app.scss */
   footer ul {
     margin-left: 0; }
-  /* line 202, ../../sass/app.scss */
+  /* line 203, ../../sass/app.scss */
   footer ul, footer p {
     margin: 0 auto;
     float: none;
     text-align: center; }
-  /* line 207, ../../sass/app.scss */
+  /* line 208, ../../sass/app.scss */
   footer i {
     line-height: 1.75em !important; }
-  /* line 210, ../../sass/app.scss */
+  /* line 211, ../../sass/app.scss */
   footer li {
     display: inline-block;
     margin-right: 1em; }
-    /* line 213, ../../sass/app.scss */
+    /* line 214, ../../sass/app.scss */
     footer li:last-child {
       margin-right: 0; }
 
-/* line 219, ../../sass/app.scss */
+/* line 220, ../../sass/app.scss */
 .sidebarFooter {
   background-color: #fcfcfc;
   border-top: 1px solid #efefef; }
-  /* line 223, ../../sass/app.scss */
+  /* line 224, ../../sass/app.scss */
   .sidebarFooter .sidebar {
     background-color: #fcfcfc;
     padding-top: 1em;
     padding-bottom: 1em;
     margin-bottom: 0em;
     border: 0; }
-    /* line 230, ../../sass/app.scss */
+    /* line 231, ../../sass/app.scss */
     .sidebarFooter .sidebar dd {
       margin-left: .5em; }
-    /* line 233, ../../sass/app.scss */
+    /* line 234, ../../sass/app.scss */
     .sidebarFooter .sidebar dd.host {
       margin: 0; }
-    /* line 236, ../../sass/app.scss */
+    /* line 237, ../../sass/app.scss */
     .sidebarFooter .sidebar .sidebarCopy {
       color: #666; }
 
-/* line 244, ../../sass/app.scss */
+/* line 245, ../../sass/app.scss */
 div.host {
   padding-left: .5em !important; }
-  /* line 247, ../../sass/app.scss */
+  /* line 248, ../../sass/app.scss */
   div.host .sidebarCopy {
     margin-bottom: 0em; }
-    /* line 249, ../../sass/app.scss */
+    /* line 250, ../../sass/app.scss */
     div.host .sidebarCopy dd {
       margin-left: 0 !important; }
 
-/* line 255, ../../sass/app.scss */
+/* line 256, ../../sass/app.scss */
 .owner.panel {
   padding: .5em 1em;
   background-color: white; }
-  /* line 258, ../../sass/app.scss */
+  /* line 259, ../../sass/app.scss */
   .owner.panel h6 {
     margin-bottom: .25em;
     line-height: 2em; }
-  /* line 262, ../../sass/app.scss */
+  /* line 263, ../../sass/app.scss */
   .owner.panel .owner-message {
     font-weight: 400; }
 
-/* line 267, ../../sass/app.scss */
+/* line 268, ../../sass/app.scss */
 .ownerFunctions {
   float: none;
   display: inline-block;
   margin-bottom: 0; }
-  /* line 273, ../../sass/app.scss */
+  /* line 274, ../../sass/app.scss */
   .ownerFunctions h6 {
     margin-top: 0; }
-  /* line 277, ../../sass/app.scss */
+  /* line 278, ../../sass/app.scss */
   .ownerFunctions .bitly {
     margin: 0; }
 
-/* line 285, ../../sass/app.scss */
+/* line 286, ../../sass/app.scss */
 #ownerAlert {
   padding-top: .25em;
   padding-bottom: .25em;
   font-weight: 300;
   font-size: .875em; }
 
-/* line 292, ../../sass/app.scss */
+/* line 293, ../../sass/app.scss */
 .highlight {
   background-color: rgba(255, 193, 37, 0.2); }
 
-/* line 303, ../../sass/app.scss */
+/* line 304, ../../sass/app.scss */
 #edit_eventName {
   font-size: 1em !important;
   font-weight: 300;
   height: 2em !important;
   line-height: 1em !important; }
 
-/* line 307, ../../sass/app.scss */
+/* line 308, ../../sass/app.scss */
 #edit_eventDesc {
   font-size: 1em !important;
   font-weight: 300;
@@ -253,33 +254,33 @@ div.host {
   line-height: 1em !important;
   height: 2.25em !important; }
 
-/* line 312, ../../sass/app.scss */
+/* line 313, ../../sass/app.scss */
 #eventDate, #eventTime, #eventLocation {
   display: block; }
 
-/* line 316, ../../sass/app.scss */
+/* line 317, ../../sass/app.scss */
 .delete {
   font-size: .875em; }
 
-/* line 320, ../../sass/app.scss */
+/* line 321, ../../sass/app.scss */
 .deleteItem {
   font-weight: 300;
   font-size: .875em; }
 
-/* line 325, ../../sass/app.scss */
+/* line 326, ../../sass/app.scss */
 .desc-row {
   padding-bottom: 1em; }
 
-/* line 329, ../../sass/app.scss */
+/* line 330, ../../sass/app.scss */
 .full-width {
   width: 100%;
   margin-bottom: 0; }
 
-/* line 334, ../../sass/app.scss */
+/* line 335, ../../sass/app.scss */
 .img-col {
   padding-right: .25em; }
 
-/* line 338, ../../sass/app.scss */
+/* line 339, ../../sass/app.scss */
 .smaller {
   font-size: .875em;
   font-weight: 300;
@@ -288,38 +289,38 @@ div.host {
   margin-bottom: 0em;
   text-align: bottom !important; }
 
-/* line 347, ../../sass/app.scss */
+/* line 348, ../../sass/app.scss */
 .item {
   border-bottom: 1px solid #ccc !important;
   padding-top: 1.25em !important;
   padding-bottom: 1.25em !important; }
-  /* line 352, ../../sass/app.scss */
+  /* line 353, ../../sass/app.scss */
   .item .itemCopy {
     margin-bottom: 1em; }
-  /* line 356, ../../sass/app.scss */
+  /* line 357, ../../sass/app.scss */
   .item .button {
     padding: .875em;
     min-width: 6em;
     margin: 0; }
-  /* line 362, ../../sass/app.scss */
+  /* line 363, ../../sass/app.scss */
   .item h4 {
     margin: 0; }
-  /* line 366, ../../sass/app.scss */
+  /* line 367, ../../sass/app.scss */
   .item:last-child {
     border-bottom: 0 !important;
     padding-bottom: 0 !important; }
 
-/* line 372, ../../sass/app.scss */
+/* line 373, ../../sass/app.scss */
 .panel {
   border: 1px solid #f0f0f0;
   padding: 1em;
   background-color: #fafafa; }
 
-/* line 378, ../../sass/app.scss */
+/* line 379, ../../sass/app.scss */
 .callout h5, .callout small {
   color: #2ba6cb !important; }
 
-/* line 382, ../../sass/app.scss */
+/* line 383, ../../sass/app.scss */
 .circle {
   display: block;
   width: 75px;
@@ -333,7 +334,7 @@ div.host {
   border-radius: 100px;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3); }
 
-/* line 386, ../../sass/app.scss */
+/* line 387, ../../sass/app.scss */
 .circle-small {
   display: block;
   width: 20px;
@@ -347,7 +348,7 @@ div.host {
   border-radius: 100px;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3); }
 
-/* line 390, ../../sass/app.scss */
+/* line 391, ../../sass/app.scss */
 .circle-large {
   display: block;
   width: 125px;
@@ -361,23 +362,23 @@ div.host {
   border-radius: 100px;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3); }
 
-/* line 394, ../../sass/app.scss */
+/* line 395, ../../sass/app.scss */
 .small-img {
   width: 100%;
   border: 1px solid #eee;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
   margin-right: .25em; }
 
-/* line 401, ../../sass/app.scss */
+/* line 402, ../../sass/app.scss */
 #addItem {
   background-color: #2ba6cb;
   width: 100%; }
 
-/* line 406, ../../sass/app.scss */
+/* line 407, ../../sass/app.scss */
 .reveal-modal {
   font-weight: 300; }
 
-/* line 410, ../../sass/app.scss */
+/* line 411, ../../sass/app.scss */
 .modal-buttons-inline {
   margin-bottom: 0; }
 
@@ -387,11 +388,11 @@ div.host {
  *
  ***************************************/
 @media only screen and (min-width: 40em) {
-  /* line 423, ../../sass/app.scss */
+  /* line 424, ../../sass/app.scss */
   .container {
     margin: 0 auto -1em; }
 
-  /* line 427, ../../sass/app.scss */
+  /* line 428, ../../sass/app.scss */
   .circle-small {
     display: block;
     width: 20px;
@@ -405,45 +406,49 @@ div.host {
     border-radius: 100px;
     box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3); }
 
-  /* line 432, ../../sass/app.scss */
+  /* line 433, ../../sass/app.scss */
   #benefits p {
     margin-bottom: 0; }
 
-  /* line 438, ../../sass/app.scss */
+  /* line 439, ../../sass/app.scss */
   #responsive h4, #responsive p {
     text-align: left; }
 
-  /* line 444, ../../sass/app.scss */
+  /* line 445, ../../sass/app.scss */
   #bio h4, #bio h5, #bio .social-icons {
     text-align: left !important; }
 
-  /* line 449, ../../sass/app.scss */
+  /* line 450, ../../sass/app.scss */
   footer {
     margin-top: 1em; }
-    /* line 451, ../../sass/app.scss */
+    /* line 452, ../../sass/app.scss */
     footer ul {
       text-align: left; }
-    /* line 454, ../../sass/app.scss */
+    /* line 455, ../../sass/app.scss */
     footer p {
       float: right; }
 
-  /* line 459, ../../sass/app.scss */
+  /* line 460, ../../sass/app.scss */
   .ownerFunctions {
     float: right; }
 
-  /* line 463, ../../sass/app.scss */
+  /* line 464, ../../sass/app.scss */
   .img-col {
     padding-right: 0; }
 
-  /* line 467, ../../sass/app.scss */
+  /* line 468, ../../sass/app.scss */
   .sidebarFooter {
     background-color: white;
     border-top: 0; }
-    /* line 471, ../../sass/app.scss */
+    /* line 472, ../../sass/app.scss */
     .sidebarFooter .sidebar {
       border: 1px solid #efefef; } }
-@media only screen and (min-width: 50em) {
-  /* line 478, ../../sass/app.scss */
+@media only screen and (min-width: 63em) {
+  /* line 479, ../../sass/app.scss */
+  .headerRow {
+    padding-top: 3em; }
+
+  /* line 483, ../../sass/app.scss */
   .imgBkg {
     background-size: 100% auto;
     background-position: left top;
