--- a/client/views/nav.html
+++ b/client/views/nav.html
@@ -1,37 +1,39 @@
 <template name="nav">
-	<nav class="top-bar" data-topbar data-options="is_hover: false">
-		<ul class="title-area">
-			<li class="name">
-				<h1><a href="/">BRING IT! <em>beta</em></a></h1>
-			</li>
-			 <li class="toggle-topbar menu-icon"><a><span>Menu</span></a></li>
-		</ul>
-		<section class="top-bar-section">
-			<!-- Right Nav Section -->
-			{{#if currentUser}}
-				<ul class="right hide-for-medium-up">
-					<li class="{{active 'home'}}"><a href="{{pathFor 'home'}}">New event</a></li>
-					<li class="{{active 'eventList'}}"><a href="{{pathFor 'eventList'}}" > My events</a></li>
-					<li><a href="{{pathFor 'logout'}}">Sign out</a></li>
-				</ul>
-				<ul class="right show-for-medium-up">
-					<li class="{{active 'home'}}"><a href="{{pathFor 'home'}}" >New event</a></li>
-					<li class="{{active 'eventList'}}"><a href="{{pathFor 'eventList'}}" >My events</a></li>
-					<li class="has-dropdown"><a><img class="circle-small left" src='{{user_image currentUser}}'> {{user_name currentUser}}</a>
-						<ul class="dropdown">
-							<li><a href="{{pathFor 'logout'}}">Sign out</a></li>
-						</ul>
-					</li>
-				</ul>
-			{{else}}
-				<ul class="right">
-					<li><a href="#" id="login">Sign in</a></li>	
-				</ul>
-			{{/if}}
-			<!-- Left Nav Section-->
-			<ul class="left">
-				<li><a target="_blank" href="{{bugUrl}}">Report a bug</a></li>
+	<div class="">
+		<nav class="top-bar" data-topbar data-options="is_hover: false">
+			<ul class="title-area">
+				<li class="name">
+					<h1><a href="/">BRING IT! <em>beta</em></a></h1>
+				</li>
+				 <li class="toggle-topbar menu-icon"><a><span>Menu</span></a></li>
 			</ul>
-		</section>
-	</nav>
+			<section class="top-bar-section">
+				<!-- Right Nav Section -->
+				{{#if currentUser}}
+					<ul class="right hide-for-medium-up">
+						<li class="{{active 'home'}}"><a href="{{pathFor 'home'}}">New event</a></li>
+						<li class="{{active 'eventList'}}"><a href="{{pathFor 'eventList'}}" > My events</a></li>
+						<li><a href="{{pathFor 'logout'}}">Sign out</a></li>
+					</ul>
+					<ul class="right show-for-medium-up">
+						<li class="{{active 'home'}}"><a href="{{pathFor 'home'}}" >New event</a></li>
+						<li class="{{active 'eventList'}}"><a href="{{pathFor 'eventList'}}" >My events</a></li>
+						<li class="has-dropdown"><a><img class="circle-small left" src='{{user_image currentUser}}'> {{user_name currentUser}}</a>
+							<ul class="dropdown">
+								<li><a href="{{pathFor 'logout'}}">Sign out</a></li>
+							</ul>
+						</li>
+					</ul>
+				{{else}}
+					<ul class="right">
+						<li><a href="#" id="login">Sign in</a></li>	
+					</ul>
+				{{/if}}
+				<!-- Left Nav Section-->
+				<ul class="left">
+					<li><a target="_blank" href="{{bugUrl}}">Report a bug</a></li>
+				</ul>
+			</section>
+		</nav>
+	</div>
 </template>
