--- a/client/views/template.html
+++ b/client/views/template.html
@@ -3,6 +3,8 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    	<title>Bring It!</title>
+		<meta name="description" content="Bring It! allows you to easily create and manage the list of items you wants guests to bring to your next party or pot-luck." />
 	</head>
 	<body>
 		<div class="container">
