--- a/client/views/template.html
+++ b/client/views/template.html
@@ -5,6 +5,12 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     	<title>Bring It!</title>
 		<meta name="description" content="Bring It! allows you to easily create and manage the list of items you wants guests to bring to your next party or pot-luck." />
+		<meta property=”og:title” content=”Bring It!”/>
+		<meta property=”og:type” content=”site”/>
+		<meta property=”og:image” content=”http://www.bringitapp.net/images/BringIt_Thumb.jpg”/>
+		<meta property=”og:url” content=”http://www.bringitapp.net”/>
+		<meta property=”og:description” content=”Bring It! allows you to easily create and manage the list of items you wants guests to bring to your next party.”/>
+		<meta property=”fb:admins” content=”1249063254”/>
 	</head>
 	<body>
 		<div class="container">
